ADD: Math in Opgave1

--- a/_includes/math.html
+++ b/_includes/math.html
@@ -1,8 +1,14 @@
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-        inlineMath: [['$','$']]
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+          inlineMath: [
+              ['\\(', '\\)']
+          ],
+          displayMath: [
+              ['$$', '$$'],
+              ['\\[', '\\]']
+          ],
       }
     });
   </script>
