--- a/_includes/math.html
+++ b/_includes/math.html
@@ -1,15 +1,22 @@
 <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {
-          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-          inlineMath: [
-              ['\\(', '\\)']
-          ],
-          displayMath: [
-              ['$$', '$$'],
-              ['\\[', '\\]']
-          ],
-      }
-    });
-  </script>
-  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
+  MathJax.Hub.Config({
+    tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [
+            ['\\(', '\\)']
+        ],
+        displayMath: [
+            ['$$', '$$'],
+            ['\\[', '\\]']
+        ],
+    }
+  });
+</script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
+
+<style>
+  .MathJax
+  {
+    font-size: 1.3em;
+  }
+</style>
