--- a/_includes/math.html
+++ b/_includes/math.html
@@ -15,8 +15,8 @@
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
 
 <style>
-  .MathJax
+  .MathJax_Display
   {
-    font-size: 1.3em;
+    font-size: 1.5em;
   }
 </style>
