--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <script>
     var tag = '<img src="favicon.png" width="70px" style="margin: 5px;-webkit-filter: invert(1);filter: invert(1);margin-bottom: -20px;box-shadow: none !important;">';
     
-    var prev = $("h1.project_title").html();
+    var prev = $("h1#project_title").html();
 
-    $("h1.project_title").html(tag + prev);
+    $("h1#project_title").html(tag + prev);
 </script>
