--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
-    var tag = '<img src="favicon.png" width="70px" style="border: none !important;margin: 5px;-webkit-filter: invert(1);filter: invert(1);margin-bottom: -20px;box-shadow: none !important;">';
+    var tag = '<img src="/favicon.png" width="70px" style="border: none !important;margin: 5px;-webkit-filter: invert(1);filter: invert(1);margin-bottom: -20px;box-shadow: none !important;">';
     
     var prev = $("h1#project_title").html();
 
