--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="/EI-Wiki/favicon.png">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
     var tag = '<img src="/EI-Wiki/favicon.png" width="70px" style="border: none !important;margin: 5px;-webkit-filter: invert(1);filter: invert(1);margin-bottom: -20px;box-shadow: none !important;">';
