--- a/_includes/countdown.html
+++ b/_includes/countdown.html
@@ -5,7 +5,7 @@
     // Update the count down every 1 second
     var x = setInterval(DoCountdown, 1000);
 
-    $(window).ready(DoCountdown());
+    $(window).ready(DoCountdown);
 
     function DoCountdown() {
 
